--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://172.31.13.54:9000/</sonar.host.url>
-		<sonar.login>squ_4f95478fe616d8f91577c00fb18deed499888d60</sonar.login>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>Mom8123348971@</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
